--- a/homework/5_BadPage.html
+++ b/homework/5_BadPage.html
@@ -4,7 +4,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>제목없음</title>
+    <title>스크린 리더</title>
     <style>
       body {
         width: 500px;
@@ -22,7 +22,6 @@
       }
       .message {
         color: white;
-        font-size: 40px;
         text-align: center;
         padding: 20px 0 50px;
       }
@@ -38,44 +37,41 @@
         text-decoration: none;
       }
       h1 {
-        font-size: 28px;
       }
       h3 {
-        font-size: 20px;
       }
       span {
-        font-size: 15px;
       }
     </style>
   </head>
   <body class="blue">
     <div class="message">
       <div>a11y homework</div>
-      <img src="//develop-with-google-kor.github.io/a11y/homework/unknown-image.jpg" width="500px">
+      <img tabindex="0" src="unknown-image.jpg " alt="모자를 쓴 두 남자가 웃고 있는 사진." width="500px">
     </div>
     <div class="mission">
-      <h1>미션</h1>
-      <h3>정신 없는 배경</h3>
-      <div>
+      <h1 tabindex="0">미션</h1>
+      <h3 tabindex="0">정신 없는 배경</h3>
+      <div tabindex="0">
         <span>배경이 <a href="https://namu.wiki/w/%EA%B4%91%EA%B3%BC%EB%AF%BC%EC%84%B1%20%EC%A6%9D%ED%9B%84%EA%B5%B0">광과민성 증후군</a>을 일으킬 만큼 정신이 없습니다. 배경화면을 진정 시켜 주세요, 단 당신의 클라이언트는 배경이 3가지 이상의 색이 주기적으로 바뀌길 원합니다.</span>
       </div>
-      <h3>알 수 없는 이미지</h3>
-      <div>
+      <h3 tabindex="0">알 수 없는 이미지</h3>
+      <div tabindex="0">
         <span>스크린 리더기가 상단에 있는 이미지를 제대로 안내하지 못합니다. 적절한 테그를 넣어 스크린 리더기가 이미지에 대한 설명을 할 수 있도록 해주세요.</span>
       </div>
-      <h3>폰트 크기 변경</h3>
+      <h3 tabindex="0">폰트 크기 변경</h3>
       <div>
-        <span>크롬 데스크탑 에서는 [설정] - [글꼴 크기] 를 통해 브라우져 및 웹 페이지의 글꼴 크기를 변경할 수 있습니다. 하지만 이 페이지는 변경이 되지 않는데요, 적절하게 변경이 되도록 해주세요.</span>
+        <span tabindex="0">크롬 데스크탑 에서는 [설정] - [글꼴 크기] 를 통해 브라우져 및 웹 페이지의 글꼴 크기를 변경할 수 있습니다. 하지만 이 페이지는 변경이 되지 않는데요, 적절하게 변경이 되도록 해주세요.</span>
       </div>
-      <h3>명암비가 너무 낮은 글씨</h3>
-      <div>
-        <span id="contrast" style="color:#DBDBDB" >이 문단의 글씨는 저시력자 분들이 보기에는 배경 색과 글자의 색 차이가 별로 나지 않습니다. 저 시력자 분들도 잘 볼 수 있도록 적절하게 색과 크기를 적절히  조정해 주세요.</span>
+      <h3 tabindex="0">명암비가 너무 낮은 글씨</h3>
+      <div tabindex="0">
+        <span id="contrast" style="color:#000000" >이 문단의 글씨는 저시력자 분들이 보기에는 배경 색과 글자의 색 차이가 별로 나지 않습니다. 저 시력자 분들도 잘 볼 수 있도록 적절하게 색과 크기를 적절히  조정해 주세요.</span>
       </div>
       <div>
         <button OnClick="javascript:blurToggle()"> 저시력자 체험하기</button>
       </div>
-      <h3>그 외..</h3>
-      <div>
+      <h3 tabindex="0">그 외..</h3>
+      <div tabindex="0">
         <span>그 외 Accessibility를 높일 만한 무엇이든 이 페이지에 적용 해 주세요 =)</span>
       </div>
     </div>
@@ -101,6 +97,6 @@ var bgChanger = (function() {
     document.body.className = colors[idx];
   }
 })();
-window.setInterval(bgChanger, 100);
+window.setInterval(bgChanger, 3000);
   </script>
 </html>
